--- a/dynamic-sitemap/src/index.scss
+++ b/dynamic-sitemap/src/index.scss
@@ -107,10 +107,12 @@ body {
         }
     }
 }
+.btn {
+    margin-bottom: 20px;
+}
 .success-result {
-    padding: 10px;
-    background: #499551;
-    color: #fff;
-    margin: 20px 10px;
+    padding: 6px;
+    background: #abdcb0;
+    margin: 12px;
     border-radius: 4px;
 }
